<resources>
    <string name="app_name">Empiricus App</string>

    <!--    Toolbar    -->
    <string name="toolbarTitleText">Ofertas</string>

    <!--    ShowcaseScreen    -->
    <string name="showcaseBaseItemShowMoreText">Veja mais</string>
    <string name="menuMyPainel">Meu painel</string>
    <string name="menuSubscriptions">Assinaturas</string>
    <string name="menuAdd" />
    <string name="menuOffers">Ofertas</string>
    <string name="menuMoreOptions">Mais opções</string>
    <string name="showcaseToolbarSearch">Pesquisar título</string>

</resources>